src/tests/errors/staticanalysis/typing/typeerrors/wrong_new_arg_type_fail.cmp
program wrong_new_arg_type_fail
begin

    proc main()
    begin
        proc f() begin return; end
     in
        return new f; /* Error: argument of new is not declared. */
    end;
end